<resources>
    <string name="google_api_key"></string>
    <string name="gcm_defaultSenderId"></string>
    <string name="app_name">Trazeo</string>
    <string name="title_fragment_children">Niñ@s</string>
    <string name="title_fragment_wall">Muro</string>
    <string name="action_settings">Configuración</string>
    <string name="title_activity_init">Trazeo</string>
    <string name="dummy_content">Trazeo</string>
    <string name="title_activity_login_simple">Acceso</string>
    <string name="title_activity_select_group">Trazeo</string>
    <string name="title_activity_monitor">Paseo en curso</string>
    <string name="action_disconnect">Desconectar</string>
    <string name="title_activity_finish_ride">FinishRideActivity</string>
    <string name="title_activity_see">Mapa del paseo</string>
    <string name="about">Acerca de&#8230;</string>
    <string name="action_points">Mis puntos</string>
    <string name="confirm_register">Confirmar</string>
    <string name="prompt_password_repeat">Repetir contraseña</string>
    <string name="title_activity_register">Registro</string>
    <string name="title_activity_edit">Configuración del grupo</string>
    <string name="prompt_edit_group">Nombre del grupo</string>
    <string name="visibility_prompt">Visibilidad/Accesibilidad</string>
    <string name="provinces_prompt">Provincias</string>
    <string name="cities_prompt">Localidades</string>
    <string name="search_btn">Buscar</string>
    <string name="see_all_btn">Ver todos</string>
    <string name="prompt_locality_group">Localidad</string>
    <string name="new_child">Nuevo niñ@</string>
    <string name="country_prompt">País</string>
    <string name="schoolName">Centro educativo</string>
    <string name="child_name_prompt">Nombre del niñ@</string>
    <string name="gender_prompt">Género</string>
    <string name="birth_date">Fecha de nacimiento</string>
    <string name="title_activity_login">Acceso</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Acceder a Trazeo</string>
    <string name="action_sign_in_short">Acceder</string>
    <string name="action_register">Registrarme</string>
    <string name="error_invalid_email">Introduce una dirección de email válida.</string>
    <string name="try_again">Inténtalo de nuevo</string>
    <string name="error_invalid_password">Tu clave es demasiado corta</string>
    <string name="error_incorrect_password">Tu clave es inválida</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string-array name="visibility_array">
        <item>Público</item>
        <item>Privado</item>
        <item>Oculto</item>
    </string-array>
    <string-array name="gender_array">
        <item>Niño</item>
        <item>Niña</item>
    </string-array>
    <string name="terminar_paseo">Terminar paseo</string>
    <string name="crea_grupo">Crea tu primer grupo</string>
    <string name="busca_pedibuses">Busca en tu ciudad</string>
    <string name="vincular_pedibuses">Vincúlate a un grupo</string>
    <string name="error_admin">Eres administrador del grupo, no te puedes desvincular de él</string>
    <string name="send_invitation_ok">Invitación enviada</string>
    <string name="insert_email">Introduce el email</string>
    <string name="gps_desactived">GPS desactivado</string>
    <string name="gps_desactived_desc">¿Deseas activarlo\npara comenzar el paseo?</string>
    <string name="network_desactived">Ubicación desactivada</string>
    <string name="network_desactived_desc">La ubicación por red móvil y Wi-Fi mejora la localización del paseo.\n¿Deseas activarla?</string>
    <string name="both_desactived">GPS y Ubicación</string>
    <string name="both_desactived_desc">¿Deseas activar el GPS y la ubicación por red móvil y Wi-Fi para comenzar el paseo?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="are_you_sure">¿Estás seguro?</string>
    <string name="you_unlink_group">Te desvincularás del grupo</string>
    <string name="official_group">Este es un grupo oficial</string>
    <string name="official_group_desc">Sólo los monitores pueden iniciar paseo. Puedes visualizar por donde va el grupo cuando esté en marcha</string>
    <string name="info_select_group">Los grupos a los que estáis vinculados tus hij@s y tú aparecen aquí. Cuando quieras iniciar el paseo para ese grupo, pulsa sobre él. Te aparecerá el listado de todos los niñ@s que están dados de alta y podrás seleccionar a los que se vayan uniendo ese día al paseo, que son los que recibirán puntos por participar y cuyos padres serán notificados cuando los marques, desmarques y cuando llegues al destino</string>
    <string name="info">Información</string>
    <string name="finish_ride">Fin del paseo</string>
    <string name="finish_ride_desc">Gracias por acompañar este paseo.\nAcabas de notificar a las familias de los participantes que han llegado bien.\nAñades 1 punto a tu cuenta. Si quieres canjear tus puntos por premios, accede al catálogo</string>
    <string name="disconnect_desc">Cerrará la sesión actual</string>
    <string name="understood">Entendido</string>
    <string name="invitations">Invitaciones</string>
    <string name="info_select_group_new">Ahora es el momento de crear tu primer grupo de paseo desde la barra de menú o vincularte a uno existente pulsando sobre el icono de la lupa.</string>
    <string name="remove_group_desc">Eliminarás este grupo</string>
    <string name="disjoin">DESVINCULAR</string>
    <string name="join">VINCULAR</string>
    <string name="child_doesnt_exist">Niñ@ no existe</string>
    <string name="petition_denied">Petición denegada</string>
    <string name="group_doesnt_exit">Este grupo ya no existe</string>
    <string name="parent_not_tutor">El padre no es tutor del niño</string>
    <string name="child_joined">Niñ@ vinculado correctamente</string>
    <string name="child_disjoined">Niñ@ desvinculado correctamente</string>
    <string name="child_on_group">Ya se encuentra vinculad@ al grupo</string>
    <string name="send">ENVIAR</string>
    <string name="send_minus">Enviar</string>
    <string name="no_childs_in_grooup">No existen niñ@s vinculados a este grupo</string>
    <string name="firstFinish"><![CDATA[Aquí finaliza tu primer paseo de prueba. En la sección Mis puntos podrás ver los puntos acumulados por participar y canjearlos por premios en el catálogo. Podrás hacer el seguimiento de los paseos de tu grupo cuando no lo acompañes e invitar a otras familias a unirse si así lo deseas.]]></string>
    <string name="firstFinish2">Gracias por acompañar este paseo.\nAcabas de notificar a las familias de los participantes que han llegado bien.\nAñades 1 punto a tu cuenta. Si quieres canjear tus puntos por premios, accede al catálogo</string>
    <string name="has_a_ride">No puedes iniciar un paseo mientras tengas otro paseo comenzado.\n Finaliza el paseo en curso antes de comenzar otro.</string>
    <string name="init_ride">INICIAR PASEO</string>
    <string name="ride_started">PASEO EN CURSO</string>
    <string name="description">Descripción</string>
    <string name="chat_button">CHAT</string>
    <string name="chat_group">Chat de grupo</string>
    <string name="option_not_yet">Pronto podrás comunicarte con los miembros de tu grupo desde este chat y recibir las notificaciones vía móvil</string>
    <string name="sorry">Disponible próximamente</string>
    <string name="not_permission">No tienes permisos para iniciar este paseo</string>
    <string name="no_children">No tienes niñ@s registrados. Antes de vincularlos a un grupos debes registrarlos desde Mis niñ@s.</string>
    <string name="school_filter">Filtrar por colegios</string>
    <string name="get_points">¿Cómo conseguir puntos?</string>
    <string name="get_points_description">Cada una de las acciones que realizas en Trazeo te permite sumar puntos en tu cuenta:</string>
    <string name="get_points_description1">- Cada día que uno de tus hij@s camine con Trazeo, sumarás 1 punto.</string>
    <string name="get_points_description2">- Cada kilómetro que uno de tus hij@s camine con Trazeo, recibirás 1 punto más (con un máximo de 25 puntos por semana).</string>
    <string name="get_points_description3">- Y si eres el acompañante o el monitor de un grupo, cada vez que guíes el paseo con la aplicación móvil recibirás 1 punto (con un máximo de 50 puntos al mes).</string>
    <string name="get_points_description4">Además, cuando lleves a cabo algunas acciones o cuando colabores con Trazeo, te enviaremos un código que te permitirá sumar puntos directamente introduciéndolo en el espacio “Canjear Cupón” que hay en la pantalla de “Mis puntos”.</string>
    <string name="where_exchange">¿Donde canjearlos?</string>
    <string name="where_exchange_description">En el catálogo de Trazeo tienes a tu disposición un listado con los premios y descuentos que puedes canjear por los puntos conseguidos.\n\nElige el que más te guste a ti o a tus hij@s y pulsa sobre el botón “Canjear”.\n\nTe mandaremos información sobre cómo recibir tu premio. Y recuerda, esta lista seguirá creciendo.
\n\nAdemás, cada una de estas acciones también te dan CIVIS en nuestra web amiga Civiclub.org, el club de las personas cívicas (mira las condiciones en la ayuda de Otros servicios en tu perfil).
        \n\nSi necesitas más información, o si eres una empresa u organismo y quieres ofrecer premios y descuentos en Trazeo, puedes ponerte en contacto con nosotros en hola@trazeo.es</string>
    <string name="welcome">¡Bienvenido!</string>
    <string name="tutorial_desc_0">Trazeo es una aplicación que te servirá para que tus hij@s vayan al colegio de forma segura y sostenible, a la vez que tú organizas mejor tu tiempo</string>
    <string name="tutorial_title_1">¡Miles de niñ@s se desplazan ya en pedibus cada mañana!</string>
    <string name="tutorial_desc_1">Con Trazeo podrás crear, organizar y localizar en tiempo real grupos de pedibus. Un pedibus es un grupo de niñ@s pequeños que caminan al cole juntos acompañados por un adulto</string>
    <string name="tutorial_title_2">Busca un grupo o invita a otros al tuyo</string>
    <string name="tutorial_desc_2">Registra a tus hij@s y únete a un grupo ya creado en tu colegio, o créalo tú e invita a otros adultos de confianza que compartan tu mismo camino</string>
    <string name="tutorial_title_3">Sigue al grupo y recibe notificaciones</string>
    <string name="tutorial_desc_3">Cada mañana, si eres tú el adulto que acompaña al grupo, podrás geoposicionarlo y registrar las asistencias. Si no, podrás ver dónde está el grupo y recibir notificación de que han llegado</string>
    <string name="tutorial_title_4">Gana puntos por participar y canjéalos por premios</string>
    <string name="tutorial_desc_4">Cada vez que tus hij@s participan en un pedibus, ganáis puntos que puedes canjear en nuestro catálogo de premios. ¡Os recompensamos por vuestros hábitos saludables!</string>
    <string name="go_button">COMENZAR</string>
    <string name="go_button_group">Comienza registrando un grupo</string>
    <string name="wait">Un momento</string>
    <string name="search_groups">Busca pedibuses que ya estén caminando en tu ciudad</string>
    <string name="catalog_points">Busca el catálogo de puntos de tu ciudad</string>
    <string name="email">Email</string>
    <string name="mobile">Dispositivo móvil</string>
    <string name="email_option_1">Ninguno</string>
    <string name="email_option_2">Sólo importantes</string>
    <string name="email_option_3">Todos</string>
    <string name="chats_option">Chats de grupo</string>
    <string name="child_in_out_option">Entrada/Salida de niñ@s en grupo</string>
    <string name="init_finish_ride_option">Inicio/Fin de paseo</string>
</resources>