<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/padding_default"
    android:gravity="center_horizontal">

    <EditText
        android:id="@+id/childName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:hint="@string/child_name_prompt"/>

    <EditText
        android:id="@+id/school"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:hint="@string/schoolName"/>

    <EditText
        android:id="@+id/date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:hint="@string/birth_date"
        android:imeOptions="actionDone"/>

    <Spinner
        android:id="@+id/genderSpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:entries="@array/gender_array"
        android:prompt="@string/gender_prompt" />

    <Button
        android:id="@+id/btnConfirm"
        android:background="@drawable/green_bar_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/white"
        android:text="@string/confirm_register"
        android:textStyle="bold"/>

</LinearLayout>