<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:paddingBottom="5dp"
        android:src="@drawable/background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/padding_default"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center"
            android:text="@string/search_groups"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/search_cities_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:prompt="@string/visibility_prompt" />

        <Button
            android:id="@+id/btnSearchGroups"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/green_bar_button"
            android:text="@string/search_btn"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSeeAll"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/green_bar_button"
            android:text="@string/see_all_btn"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>

</FrameLayout>
