<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sopinet.trazeo.app.MyNotificationsActivity">

    <include layout="@layout/toolbar" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbarStyle="outsideOverlay"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="30dip"
                    android:text="@string/email"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/gray_dark_2" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="3dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/green_trazeo_2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="40dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="12dp">

                <CheckBox
                    android:id="@+id/cbOption1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_option_1" />

                <CheckBox
                    android:id="@+id/cbOption2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_option_2" />

                <CheckBox
                    android:id="@+id/cbOption3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_option_3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="30dip"
                    android:text="@string/mobile"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/gray_dark_2" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="3dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/green_trazeo_2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="40dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="12dp">

                <CheckBox
                    android:id="@+id/cbMobileOption1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/init_finish_ride_option" />

                <CheckBox
                    android:id="@+id/cbMobileOption2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/child_in_out_option" />

                <CheckBox
                    android:id="@+id/cbMobileOption3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chats_option" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/notification_change_apply"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/green_bar_button"
        android:text="@string/confirm_register"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="16dp" />

</LinearLayout>
