<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.sopinet.trazeo.app.LoginActivity">

    <include layout="@layout/toolbar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:paddingBottom="5dp"
            android:src="@drawable/background" />

        <ScrollView
            android:id="@+id/new_group_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_default">

            <LinearLayout
                android:id="@+id/new_group_name_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <AutoCompleteTextView
                    android:id="@+id/new_group_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15sp"
                    android:hint="@string/prompt_edit_group"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:singleLine="true" />

                <AutoCompleteTextView
                    android:id="@+id/locality"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15sp"
                    android:hint="@string/prompt_locality_group"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:singleLine="true" />

                <AutoCompleteTextView
                    android:id="@+id/school"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15sp"
                    android:hint="@string/schoolName"
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:singleLine="true" />

                <Spinner
                    android:id="@+id/visibilitySpinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10sp"
                    android:entries="@array/visibility_array"
                    android:prompt="@string/visibility_prompt" />

                <Button
                    android:id="@+id/btnNewGroup"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/green_bar_button"
                    android:text="@string/confirm_register"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</LinearLayout>